--- a/trangvande.html
+++ b/trangvande.html
@@ -11,19 +11,21 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     <body>
+        <ul>
 <!-- Thanh công cụ -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>IOT</b> Lò ấp trứng </a>
+    <a href="trangchu.html" class="w3-bar-item w3-button"><b>IOT</b> Lò ấp trứng </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="trangchu.html" class="w3-bar-item w3-button">Trang chủ</a>
-      <a href="trangthanhvien.html" class="w3-bar-item w3-button">Trang thành viên</a>
-      <a href="trangvande.html" class="w3-bar-item w3-button">Trang vấn đề</a>
-      <a href="tranglienhe.html" class="w3-bar-item w3-button">Liên hệ</a>
+    <li>  <a href="" class="w3-bar-item w3-button">Trang chủ</a></li>
+     <li> <a href="trangthanhvien.html" class="w3-bar-item w3-button">Trang thành viên</a></li>
+     <li> <a href="trangvande.html" class="w3-bar-item w3-button">Trang vấn đề</a></li>
+     <li> <a href="tranglienhe.html" class="w3-bar-item w3-button">Liên hệ</a></li>
     </div>
   </div>
 </div>
+        </ul>
         <br> 
         <br> 
         <br> 
@@ -35,7 +37,7 @@
         <p>  3. Manual: Người dùng trực tiếp điều khiển các thiết bị chấp hành qua giao diện Web</p>
         
 
-<div class="dropdown">
+<div class="button">
   <button class="dropbtn">Chế độ</button>
   <div class="value" id="SelectMode"></div>
   <input type="option" id="Mode">
